-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 8.0.1, Qt Creator 8.0.2
-
None
-
Apple Silicon M1, macOS 12.1, Apple clangd version 13.0.0 (clang-1300.0.29.30)
Apple Silicon M1, macOS 12.6, Apple clangd version 13.0.0 (clang-1300.0.29.30)
-
-
c4ee485bdf (qt-creator/qt-creator/9.0) c4ee485bdf (qt-creator/qt-creator/qds/dev) c4ee485bdf (qt-creator/qt-creator/master)
In a .cpp file, invoke "Switch Header/Source" (by any method) and the editor switches momentarily to the .h and then switches back to the .cpp.
I have attached a couple of videos showing this. As you'll also see, changing cursor location before the switch is ignored, suggesting Qt Creator has somehow got locked into a particular location.
This is an intermittent bug but it is happening so frequently it has become a source of frustration.
The workaround is to close both the header and source and then open them afresh. However I have seen the issue recur within 5 minutes at times.
For Gerrit Dashboard: QTCREATORBUG-28183 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
441935,2 | ClangCodeModel: Fix persistent SwitchDeclDef object | 9.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |